--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -251,6 +251,83 @@
    "source": [
     "re.sub(r\"(Điều\\s)(\\d+)\", r\"\\1_\\2\", test)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Đây là một câu với khoảng trắng dư thừa.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "def line_breaker_remover(paragraph):\n",
+    "    para = re.sub(r\"\\n+\" , \"\",paragraph)\n",
+    "    para = re.sub(r\"\\.\\.\\.\", \"\", para)\n",
+    "    para = para.replace(\"  \", \" \")\n",
+    "    return para\n",
+    "\n",
+    "def remove_extra_spaces(text):\n",
+    "    # Thay thế nhiều khoảng trắng liên tiếp thành một khoảng trắng đơn\n",
+    "    return re.sub(r'\\s{3,}', ' ', text).strip()  # Loại bỏ khoảng trắng thừa ở đầu và cuối\n",
+    "text = \"Đây   là   một   câu    với   khoảng    trắng   dư thừa.\"\n",
+    "cleaned_text = remove_extra_spaces(text)\n",
+    "print(cleaned_text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pyvi.ViTokenizer import tokenize\n",
+    "\n",
+    "class TextPreprocessing:\n",
+    "    def __init__(self):\n",
+    "        pass\n",
+    "\n",
+    "    def preprocess(self,\n",
+    "                   paragraph,\n",
+    "                   punctuation_remover,\n",
+    "                   line_breaker_remover,\n",
+    "                   lowercase_standardizer,\n",
+    "                   white_space_remover,\n",
+    "                   text_tokenizer,\n",
+    "                   stop_word_remover,\n",
+    "                   law_text_recognizer,\n",
+    "                   ):\n",
+    "        return \n",
+    "    def _punctuation_remover(self, paragraph):\n",
+    "        for punc in string.punctuation:\n",
+    "            para = paragraph.replace(punc, \"\")\n",
+    "            para = re.sub(r\"\\s+\", \"\", para)\n",
+    "        return para\n",
+    "        \n",
+    "    \n",
+    "    def _lowercase_standardizer(self,paragraph):\n",
+    "        pass\n",
+    "    \n",
+    "    def _white_space_remover(self, paragraph):\n",
+    "        pass\n",
+    "    \n",
+    "    def _text_tokenizer(self, paragraph):\n",
+    "        pass\n",
+    "    \n",
+    "    def law_text_recognizer(self, paragraph):\n",
+    "        pass\n",
+    "    \n",
+    "    def _stopword_remover(self,paragraph):\n",
+    "        pass\n",
+    "    \n",
+    "    "
+   ]
   }
  ],
  "metadata": {
