"Update legal dictionary"

--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -431,12 +431,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "from pyvi import ViTokenizer\n",
-    "txt  = \" Khi báo động lũ ở cấp I trở lên, 1) đội tuần tra, canh gác đê phải báo tín hiệu cấp báo động lũ tại các điếm canh đê, như sau:\\na) - Báo động lũ ở cấp I: 01 đèn màu xanh (ban ngày có thể bổ sung 01 biển hoặc cờ, hình tam giác màu đỏ để dễ nhận biết);\\n- Báo động lũ ở cấp II:    02 đèn màu xanh (ban ngày có thể bổ sung 02 biển hoặc cờ, hình tam giác màu đỏ để dễ nhận biết);\\n- Báo động lũ ở cấp III: 03 đèn màu xanh (ban ngày có thể bổ sung 03 biển hoặc cờ, hình tam giác màu đỏ để dễ nhận biết).\\nb) Các biển (hoặc cờ), đèn báo hiệu được treo theo chiều dọc, với chiều cao thích hợp để mọi người trong khu vực nhìn thấy được.\\n2. Trường hợp khẩn cấp xảy ra sự cố nguy hiểm đe dọa đến an toàn của đê Điều, cần phải huy động lực lượng ứng cứu thì đội trưởng hoặc đội phó của đội tuần tra, canh gác đê cho đánh trống (hoặc kẻng) liên hồi để báo động.\"\n"
+    "\n",
+    "# ViTokenizer.tokenize('trở lên')\n",
+    "txt  = \" Khi báo động lũ ở cấp I trở lên, (https://test.com) đội tuần tra, canh gác đê phải báo tín hiệu cấp báo động lũ tại các điếm canh đê, như sau:\\na) - Báo động lũ ở cấp I: 01 đèn màu xanh (ban ngày có thể bổ sung 01 biển hoặc cờ, hình tam giác màu đỏ để dễ nhận biết);\\n- Báo động lũ ở cấp II:    02 đèn màu xanh (ban ngày có thể bổ sung 02 biển hoặc cờ, hình tam giác màu đỏ để dễ nhận biết);\\n- Báo động lũ ở cấp III: 03 đèn màu xanh (ban ngày có thể bổ sung 03 biển hoặc cờ, hình tam giác màu đỏ để dễ nhận biết).\\nb) Các biển (hoặc cờ), đèn báo hiệu được treo theo chiều dọc, với chiều cao thích hợp để mọi người trong khu vực nhìn thấy được.\\n2. Trường hợp khẩn cấp xảy ra sự cố nguy hiểm đe dọa đến an toàn của đê Điều, cần phải huy động lực lượng ứng cứu thì đội trưởng hoặc đội phó của đội tuần tra, canh gác đê cho đánh trống (hoặc kẻng) liên hồi để báo động.\"\n"
    ]
   },
   {
@@ -448,14 +450,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Xử lý các nội dung pháp lý: 100%|██████████| 75/75 [00:00<00:00, 384093.77it/s]\n",
-      "Đang xử lý các quy tắc pháp luật: 100%|██████████| 5/5 [00:00<00:00, 2487.72it/s]\n"
+      "Xử lý các nội dung pháp lý: 100%|██████████| 75/75 [00:00<00:00, 408536.10it/s]\n",
+      "Đang xử lý các quy tắc pháp luật: 100%|██████████| 5/5 [00:00<00:00, 2722.87it/s]\n",
+      "Xử lý các từ đặc biệt: 100%|██████████| 1/1 [00:00<00:00, 10866.07it/s]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "'Khi báo_động_lũ cấp_I trở đội tuần_tra canh_gác đê báo tín_hiệu báo_động_lũ điếm_canh đê Báo_động lũ cấp_I 01 đèn màu xanh ban_ngày bổ_sung 01 biển cờ hình tam_giác màu đỏ Báo_động lũ cấp_II 02 đèn màu xanh ban_ngày bổ_sung 02 biển cờ hình tam_giác màu đỏ Báo_động lũ cấp_III 03 đèn màu xanh ban_ngày bổ_sung 03 biển cờ hình tam_giác màu đỏ . Các biển đèn báo_hiệu treo chiều dọc chiều thích_hợp khu_vực . Trường_hợp khẩn_cấp xảy sự_cố nguy_hiểm đe_dọa an_toàn đê Điều huy_động lực_lượng ứng_cứu đội_trưởng đội phó đội tuần_tra canh_gác đê đánh trống liên_hồi báo_động .'"
+       "'Khi báo_động_lũ cấp_I trở_lên đội tuần_tra canh_gác đê báo tín_hiệu báo_động_lũ điếm_canh đê Báo_động lũ cấp_I 01 đèn màu xanh ban_ngày bổ_sung 01 biển cờ hình tam_giác màu đỏ Báo_động lũ cấp_II 02 đèn màu xanh ban_ngày bổ_sung 02 biển cờ hình tam_giác màu đỏ Báo_động lũ cấp_III 03 đèn màu xanh ban_ngày bổ_sung 03 biển cờ hình tam_giác màu đỏ . Các biển đèn báo_hiệu treo chiều dọc chiều thích_hợp khu_vực . Trường_hợp khẩn_cấp xảy sự_cố nguy_hiểm đe_dọa an_toàn đê Điều huy_động lực_lượng ứng_cứu đội_trưởng đội phó đội tuần_tra canh_gác đê đánh trống liên_hồi báo_động .'"
       ]
      },
      "execution_count": 4,
