--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -443,6 +443,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "module 'src.retrieval.lexical.bm25s' has no attribute 'BM25'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msrc\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mretrieval\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mlexical\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m bm25s\n\u001b[0;32m----> 3\u001b[0m \u001b[43mbm25s\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mBM25\u001b[49m()\n",
+      "\u001b[0;31mAttributeError\u001b[0m: module 'src.retrieval.lexical.bm25s' has no attribute 'BM25'"
+     ]
+    }
+   ],
+   "source": [
+    "from src.retrieval.lexical.bm25s import bm25s\n",
+    "\n",
+    "bm25s.BM25()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [
