--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -443,25 +443,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "module 'src.retrieval.lexical.bm25s' has no attribute 'BM25'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[2], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msrc\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mretrieval\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mlexical\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m bm25s\n\u001b[0;32m----> 3\u001b[0m \u001b[43mbm25s\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mBM25\u001b[49m()\n",
-      "\u001b[0;31mAttributeError\u001b[0m: module 'src.retrieval.lexical.bm25s' has no attribute 'BM25'"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "An NVIDIA GPU may be present on this machine, but a CUDA-enabled jaxlib is not installed. Falling back to cpu.\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<src.retrieval.lexical.bm25s.bm25s.BM25 at 0x7f878135ca90>"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "from src.retrieval.lexical.bm25s import bm25s\n",
-    "\n",
     "bm25s.BM25()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "17d75fbb14c54ee18051836b364d15a0",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Split strings:   0%|          | 0/2 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Tokenized(ids=[[0, 1, 2, 3, 4, 5, 6], [7, 1, 8, 9, 3, 10, 11, 12]], vocab={'cat': 0, 'is': 1, 'eline': 2, 'and': 3, 'likes': 4, 'to': 5, 'burr': 6, 'dog': 7, 'so': 8, 'sutdyp': 9, 'human': 10, 'best': 11, 'frend': 12})"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import bm25s\n",
+    "corpus = ['a cat is a eline and likes to burr', 'a dog is so sutdyp and a human best frend']\n",
+    "bm25s.tokenize(corpus, stopwords= None)"
    ]
   },
   {
