Minor fix in finetuning model and Bm25Tokenizer

--- a/notebooks/update_vocab_to_tokenizer.ipynb
+++ b/notebooks/update_vocab_to_tokenizer.ipynb
@@ -201,6 +201,86 @@
    "source": [
     "os.path.join()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from src.preprocessor.utils.dataset_level import *\n",
+    "# import string\n",
+    "# old_vocab =read_txt('./data/vocab/phobert_vocab_raw.txt')\n",
+    "# vocabs = []\n",
+    "# for item in old_vocab:\n",
+    "#     item = item.split(\" \")[0]\n",
+    "#     if len(item) > 1:\n",
+    "#         item = item.replace(\"@@\", \"\")\n",
+    "#         for punc in string.punctuation:\n",
+    "#             if item.endswith(punc):\n",
+    "#                 item = item.replace(punc, \"\")\n",
+    "#     else:\n",
+    "#         item = item\n",
+    "#     vocabs.append(item)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "13007"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from src.preprocessor.vocab.stopwords import STOP_WORDS\n",
+    "from src.preprocessor.vocab.roman_numerals_dict import ROMAN_DICT\n",
+    "from src.preprocessor.vocab.duties_dict import DUTIES\n",
+    "from src.preprocessor.vocab.legal_dict import LEGAL_DICT\n",
+    "\n",
+    "\n",
+    "corpus = set(read_json('./src/preprocessor/vocab/data/update_vocab.json'))\n",
+    "phobert_vocab = read_json('./src/preprocessor/vocab/data/phobert_vocab_processed.json')\n",
+    "DUTIES = set(DUTIES.values())\n",
+    "LEGAL_DICT = set(LEGAL_DICT.values())\n",
+    "# corpus.update(set(phobert_vocab))\n",
+    "corpus.update(ROMAN_DICT)\n",
+    "corpus.update(STOP_WORDS)\n",
+    "corpus.update(DUTIES)\n",
+    "corpus.update(LEGAL_DICT)\n",
+    "len(corpus)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "save_json(list(corpus), './src/preprocessor/vocab/data/update_vocab_v1.json')"
+   ]
   }
  ],
  "metadata": {
