--- a/test_v3.ipynb
+++ b/test_v3.ipynb
@@ -2,14 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processing queries: 100%|██████████| 119456/119456 [00:00<00:00, 890655.66it/s]\n"
+      "Processing queries: 100%|██████████| 119456/119456 [00:00<00:00, 755357.66it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11308\n"
      ]
     }
    ],
@@ -22,19 +29,20 @@
     "\n",
     "queries = read_pickle('/home/thiendc/projects/legal_retrieval/data/processed/queries.pkl')\n",
     "relevant_docs = read_pickle('/home/thiendc/projects/legal_retrieval/data/processed/relevant_docs.pkl')\n",
-    "train_dataset = prepare_training_dataset(queries, corpus, relevant_docs)"
+    "train_dataset = prepare_training_dataset(queries, corpus, relevant_docs)\n",
+    "print(len(train_dataset))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Added 6172 new tokens to the vocabulary\n"
+      "Added 6461 new tokens to the vocabulary\n"
      ]
     }
    ],
@@ -136,16 +144,16 @@
     "\n",
     "# Sử dụng hàm:\n",
     "# 1. Load new tokens\n",
-    "new_tokens = read_json('./src/preprocessor/vocab/data/update_vocab_v1.json')\n",
+    "new_tokens = read_json('./src/preprocessor/vocab/data/update_vocab_v2.json')\n",
     "\n",
     "# 2. Setup model với vocab mới\n",
-    "model, tokenizer = setup_embedding_model('VoVanPhuc/sup-SimCSE-VietNamese-phobert-base', new_tokens= new_tokens)\n",
+    "model, _ = setup_embedding_model('VoVanPhuc/sup-SimCSE-VietNamese-phobert-base', new_tokens= new_tokens)\n",
     "# model = SentenceTransformer(\"intfloat/multilingual-e5-small\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +178,7 @@
     "#     )\n",
     "#     matryoshka_evaluators.append(ir_evaluator)\n",
     "\n",
-    "# # Create a sequential evaluator\n",
+    "# Create a sequential evaluator\n",
     "# evaluator = SequentialEvaluator(matryoshka_evaluators)\n",
     "evaluator = InformationRetrievalEvaluator(\n",
     "        queries=queries,\n",
@@ -184,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,72 +207,116 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Currently using DataParallel (DP) for multi-gpu training, while DistributedDataParallel (DDP) is recommended for faster training. See https://sbert.net/docs/sentence_transformer/training/distributed.html for more information.\n"
+      "Currently using DataParallel (DP) for multi-gpu training, while DistributedDataParallel (DDP) is recommended for faster training. See https://sbert.net/docs/sentence_transformer/training/distributed.html for more information.\n",
+      "Detected kernel version 5.4.0, which is below the recommended minimum of 5.5.0; this can cause the process to hang. It is recommended to upgrade the kernel to the minimum version or higher.\n"
      ]
     }
    ],
    "source": [
     "import torch\n",
+    "import gc\n",
+    "from contextlib import contextmanager\n",
     "from sentence_transformers.training_args import BatchSamplers\n",
     "from sentence_transformers import SentenceTransformerTrainer, SentenceTransformerTrainingArguments\n",
     "\n",
+    "@contextmanager\n",
+    "def track_memory():\n",
+    "    torch.cuda.reset_peak_memory_stats()\n",
+    "    yield\n",
+    "    print(f\"Peak memory: {torch.cuda.max_memory_allocated() / 1e9:.2f} GB\")\n",
+    "\n",
+    "# Custom trainer với memory management\n",
+    "class MemoryEfficientTrainer(SentenceTransformerTrainer):\n",
+    "    def training_step(self, *args, **kwargs):\n",
+    "        loss = super().training_step(*args, **kwargs)\n",
+    "        \n",
+    "        # Dọn memory Python và CUDA cache sau mỗi step\n",
+    "        gc.collect()\n",
+    "        torch.cuda.empty_cache()\n",
+    "        \n",
+    "        return loss\n",
+    "        \n",
+    "    def on_epoch_end(self):\n",
+    "        # Dọn memory sau mỗi epoch\n",
+    "        gc.collect()\n",
+    "        torch.cuda.empty_cache()\n",
+    "        super().on_epoch_end()\n",
+    "\n",
+    "# Training arguments\n",
     "args = SentenceTransformerTrainingArguments(\n",
     "    output_dir=\"legal_finetuning\",\n",
-    "    num_train_epochs= 5,\n",
-    "    per_device_train_batch_size= 16,             \n",
-    "    gradient_accumulation_steps= 4,            \n",
-    "    per_device_eval_batch_size= 8,\n",
+    "    num_train_epochs = 1,\n",
+    "    per_device_train_batch_size= 16,  # Giảm batch size             \n",
+    "    gradient_accumulation_steps=8,  # Tăng gradient accumulation            \n",
+    "    per_device_eval_batch_size= 16,\n",
     "    gradient_checkpointing=True,\n",
-    "    warmup_ratio=0.1,\n",
-    "    learning_rate= 1e-5,\n",
+    "    warmup_ratio=0.15,\n",
+    "    learning_rate=5e-6,\n",
     "    lr_scheduler_type=\"cosine\",\n",
     "    optim=\"adamw_torch_fused\",\n",
     "    fp16=True,\n",
     "    batch_sampler=BatchSamplers.NO_DUPLICATES,\n",
     "    eval_strategy=\"steps\",\n",
-    "    save_steps= 50,\n",
-    "    logging_steps= 10,\n",
-    "    save_total_limit= 5,\n",
+    "    save_steps= 20,\n",
+    "    logging_steps = 5,\n",
+    "    save_total_limit=5,\n",
     "    load_best_model_at_end=True,\n",
-    "    max_grad_norm=1.0,\n",
+    "    max_grad_norm=0.5,\n",
     "    metric_for_best_model=\"eval_dim_768_cosine_ndcg@10\",\n",
-    "    ddp_find_unused_parameters=False\n",
-    ")\n"
+    "    ddp_find_unused_parameters=False,\n",
+    "    dataloader_num_workers = 40\n",
+    ")\n",
+    "\n",
+    "# Khởi tạo trainer với custom class\n",
+    "trainer = MemoryEfficientTrainer(\n",
+    "    model=model,\n",
+    "    args=args,\n",
+    "    train_dataset=train_dataset,\n",
+    "    loss=train_loss,\n",
+    "    evaluator=evaluator,\n",
+    ")\n",
+    "\n",
+    "# Dọn cache trước khi training\n",
+    "torch.cuda.empty_cache()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Detected kernel version 5.4.0, which is below the recommended minimum of 5.5.0; this can cause the process to hang. It is recommended to upgrade the kernel to the minimum version or higher.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "trainer = SentenceTransformerTrainer(\n",
-    "    model=model,\n",
-    "    args=args,\n",
-    "    train_dataset= train_dataset,\n",
-    "    loss=train_loss,\n",
-    "    evaluator=evaluator,\n",
-    ")"
+    "# trainer = SentenceTransformerTrainer(\n",
+    "#     model=model,\n",
+    "#     args=args,\n",
+    "#     train_dataset= train_dataset,\n",
+    "#     loss=train_loss,\n",
+    "#     evaluator=evaluator,\n",
+    "# )\n",
+    "# torch.cuda.empty_cache()\n",
+    "# trainer.train()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "os.environ[\"TOKENIZERS_PARALLELISM\"] = \"false\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -279,12 +331,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "51a29d4545e54b089387f438fb3f8d8e",
+       "model_id": "0e06e8d999ea498892f23246e0883420",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(Label(value='Waiting for wandb.init()...\\r'), FloatProgress(value=0.011113457733558284, max=1.0…"
+       "VBox(children=(Label(value='Waiting for wandb.init()...\\r'), FloatProgress(value=0.011112643134159347, max=1.0…"
       ]
      },
      "metadata": {},
@@ -305,7 +357,7 @@
     {
      "data": {
       "text/html": [
-       "Run data is saved locally in <code>/home/thiendc/projects/legal_retrieval/wandb/run-20241101_154620-vgrzsrvr</code>"
+       "Run data is saved locally in <code>/home/thiendc/projects/legal_retrieval/wandb/run-20241102_210546-z9wco0y6</code>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -317,7 +369,7 @@
     {
      "data": {
       "text/html": [
-       "Syncing run <strong><a href='https://wandb.ai/thiendc3005/sentence-transformers/runs/vgrzsrvr' target=\"_blank\">legal_finetuning</a></strong> to <a href='https://wandb.ai/thiendc3005/sentence-transformers' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/run' target=\"_blank\">docs</a>)<br/>"
+       "Syncing run <strong><a href='https://wandb.ai/thiendc3005/sentence-transformers/runs/z9wco0y6' target=\"_blank\">legal_finetuning</a></strong> to <a href='https://wandb.ai/thiendc3005/sentence-transformers' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/run' target=\"_blank\">docs</a>)<br/>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -341,7 +393,7 @@
     {
      "data": {
       "text/html": [
-       " View run at <a href='https://wandb.ai/thiendc3005/sentence-transformers/runs/vgrzsrvr' target=\"_blank\">https://wandb.ai/thiendc3005/sentence-transformers/runs/vgrzsrvr</a>"
+       " View run at <a href='https://wandb.ai/thiendc3005/sentence-transformers/runs/z9wco0y6' target=\"_blank\">https://wandb.ai/thiendc3005/sentence-transformers/runs/z9wco0y6</a>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -356,8 +408,8 @@
        "\n",
        "    <div>\n",
        "      \n",
-       "      <progress value='21' max='220' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [ 21/220 35:23 < 6:10:45, 0.01 it/s, Epoch 0.45/5]\n",
+       "      <progress value='2' max='22' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      [ 2/22 : < :, Epoch 0.05/1]\n",
        "    </div>\n",
        "    <table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
@@ -365,44 +417,9 @@
        "      <th>Step</th>\n",
        "      <th>Training Loss</th>\n",
        "      <th>Validation Loss</th>\n",
-       "      <th>Dim 768 Cosine Accuracy@1</th>\n",
-       "      <th>Dim 768 Cosine Accuracy@3</th>\n",
-       "      <th>Dim 768 Cosine Accuracy@5</th>\n",
-       "      <th>Dim 768 Cosine Accuracy@10</th>\n",
-       "      <th>Dim 768 Cosine Precision@1</th>\n",
-       "      <th>Dim 768 Cosine Precision@3</th>\n",
-       "      <th>Dim 768 Cosine Precision@5</th>\n",
-       "      <th>Dim 768 Cosine Precision@10</th>\n",
-       "      <th>Dim 768 Cosine Recall@1</th>\n",
-       "      <th>Dim 768 Cosine Recall@3</th>\n",
-       "      <th>Dim 768 Cosine Recall@5</th>\n",
-       "      <th>Dim 768 Cosine Recall@10</th>\n",
-       "      <th>Dim 768 Cosine Ndcg@10</th>\n",
-       "      <th>Dim 768 Cosine Mrr@10</th>\n",
-       "      <th>Dim 768 Cosine Map@100</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
-       "    <tr>\n",
-       "      <td>10</td>\n",
-       "      <td>3.927100</td>\n",
-       "      <td>No log</td>\n",
-       "      <td>0.023967</td>\n",
-       "      <td>0.038793</td>\n",
-       "      <td>0.044820</td>\n",
-       "      <td>0.053635</td>\n",
-       "      <td>0.023967</td>\n",
-       "      <td>0.013068</td>\n",
-       "      <td>0.009110</td>\n",
-       "      <td>0.005475</td>\n",
-       "      <td>0.021996</td>\n",
-       "      <td>0.035433</td>\n",
-       "      <td>0.040958</td>\n",
-       "      <td>0.049065</td>\n",
-       "      <td>0.035543</td>\n",
-       "      <td>0.033019</td>\n",
-       "      <td>0.031252</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table><p>"
       ],
@@ -415,13 +432,18 @@
     }
    ],
    "source": [
-    "# Bắt đầu train\n",
-    "trainer.train()"
+    "# Training với memory tracking\n",
+    "with track_memory():\n",
+    "    trainer.train()\n",
+    "\n",
+    "# Dọn memory sau khi training xong\n",
+    "gc.collect()\n",
+    "torch.cuda.empty_cache()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -429,23 +451,40 @@
      "output_type": "stream",
      "text": [
       "Token is valid (permission: write).\n",
-      "\u001b[1m\u001b[31mCannot authenticate through git-credential as no helper is defined on your machine.\n",
-      "You might have to re-authenticate when pushing to the Hugging Face Hub.\n",
-      "Run the following command in your terminal in case you want to set the 'store' credential helper as default.\n",
-      "\n",
-      "git config --global credential.helper store\n",
-      "\n",
-      "Read https://git-scm.com/book/en/v2/Git-Tools-Credential-Storage for more details.\u001b[0m\n",
-      "Token has not been saved to git credential helper.\n",
+      "Your token has been saved in your configured git credential helpers (store).\n",
       "Your token has been saved to /home/thiendc/.cache/huggingface/token\n",
       "Login successful\n"
      ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "588905a06ed849c6bdf96afe7df4e99d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "model.safetensors:   0%|          | 0.00/559M [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'https://huggingface.co/Tnt3o5/test_embedding_model/commit/a6177571d2c5535081604dbd0f8326683b8604f0'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# from huggingface_hub import login\n",
-    "# login(token=\"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\", add_to_git_credential=True)\n",
-    "# trainer.model.push_to_hub(\"miai-sample-embedding\")\n"
+    "from huggingface_hub import login\n",
+    "login(token=\"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\", add_to_git_credential=True)\n",
+    "trainer.model.push_to_hub(\"test_embedding_model\")\n"
    ]
   }
  ],
